--- a/shopping/index.html
+++ b/shopping/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="css/base.css">
     <!-- 引入我们公共的样式文件 -->
     <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
@@ -80,6 +81,7 @@
         </div>
     </header>
     <!-- header头部模块 end -->
+
     <!-- nav导航模块 start -->
     <nav class="nav">
         <div class="w">
@@ -120,6 +122,156 @@
         </div>
     </nav>
     <!-- nav导航模块 end -->
+
+    <!-- main首页模块 start -->
+    <div class="w">
+        <div class="main">
+            <div class="focus">
+                <ul>
+                    <li>
+                        <img src="./upload/focus1.png" alt="">
+                    </li>
+                </ul>
+            </div>
+            <div class="newsflash">
+                <div class="news">
+                    <div class="news-hd">
+                        <h5>品优购快报</h5>
+                        <a href="#" class="more">更多</a>
+                    </div>
+                    <div class="news-bd">
+                        <ul>
+                            <li><a href="#"> <strong>[重磅]</strong>我来了！我来了！我来了！我来了！我来了！我来了!</a></li>
+                            <li><a href="#"> <strong>[重磅]</strong>我来了！</a></li>
+                            <li><a href="#"> <strong>[重磅]</strong>我来了！</a></li>
+                            <li><a href="#"> <strong>[重磅]</strong>我来了！</a></li>
+                            <li><a href="#"> <strong>[重磅]</strong>我来了！</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="lifeservice">
+                    <ul>
+                        <li>
+                            <i></i>
+                            <p>话费</p>
+                        </li>
+                        <li>
+                            <i></i>
+                            <p>话费</p>
+                        </li>
+                        <li>
+                            <i></i>
+                            <p>话费</p>
+                        </li>
+                        <li>
+                            <i></i>
+                            <p>话费</p>
+                        </li>
+                        <li>
+                            <i></i>
+                            <p>话费</p>
+                        </li>
+                        <li>
+                            <i></i>
+                            <p>话费</p>
+                        </li>
+                        <li>
+                            <i></i>
+                            <p>话费</p>
+                        </li>
+                        <li>
+                            <i></i>
+                            <p>话费</p>
+                        </li>
+                        <li>
+                            <i></i>
+                            <p>话费</p>
+                        </li>
+                        <li>
+                            <i></i>
+                            <p>话费</p>
+                        </li>
+                        <li>
+                            <i></i>
+                            <p>话费</p>
+                        </li>
+                        <li>
+                            <i></i>
+                            <p>话费</p>
+                        </li>
+
+                    </ul>
+                </div>
+                <div class="bargain">
+                    <img src="./upload/bargain.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- main首页模块 end -->
+
+    <!-- recommand 推荐模块 start -->
+    <div class="w recom">
+        <div class="recom_hd">
+            <img src="./images/recom.png" alt="">
+        </div>
+        <div class="recom_bd">
+            <ul>
+                <li> <img src="./upload/recom_03.jpg" alt=""></li>
+                <li> <img src="./upload/recom_03.jpg" alt=""></li>
+                <li> <img src="./upload/recom_03.jpg" alt=""></li>
+                <li> <img src="./upload/recom_03.jpg" alt=""></li>
+            </ul>
+        </div>
+    </div>
+    <!-- recommand 推荐模块 end -->
+
+    <!-- floor楼层区 start-->
+    <!-- floor楼层区 end -->
+    <div class="floor">
+        <div class="w jiadian">
+            <div class="box_hd">
+                <h3>家用电器</h3>
+                <div class="tab_list">
+                    <ul>
+                        <li> <a href="#" class="style_red">热门</a>|</li>
+                        <li><a href="#">大家电</a>|</li>
+                        <li><a href="#">生活电器</a>|</li>
+                        <li><a href="#">厨房电器</a>|</li>
+                        <li><a href="#">生活电器</a>|</li>
+                        <li><a href="#">个护健康</a>|</li>
+                        <li><a href="#">应季电器</a>|</li>
+                        <li><a href="#">空气/净水</a>|</li>
+                        <li><a href="#">新奇特</a>|</li>
+                        <li><a href="#"> 高端电器</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="box_bd">
+                <div class="tab_content">
+                    <div class="tab_list_item">
+                        <div class="col_210">
+                            <ul>
+                                <li><a href="#">节能补贴</a></li>
+                                <li><a href="#">节能补贴</a></li>
+                                <li><a href="#">节能补贴</a></li>
+                                <li><a href="#">节能补贴</a></li>
+                                <li><a href="#">节能补贴</a></li>
+                                <li><a href="#">节能补贴</a></li>
+                            </ul>
+                            <a href="#">
+                                <img src="./upload/floor-1-1.png" alt="">
+                            </a>
+                        </div>
+                        <div class="col_329">2</div>
+                        <div class="col_221">3</div>
+                        <div class="col_221">4</div>
+                        <div class="col_219">5</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- footer底部模块制作 start -->
     <footer class="footer">
         <div class="w">
@@ -203,7 +355,7 @@
                 </dl>
                 <dl>
                     <dt>帮助中心</dt>
-                    <dd> 
+                    <dd>
                         <img src="images/wx_cz.jpg" alt="">
                         品优购客户端
                     </dd>
@@ -212,7 +364,8 @@
             </div>
             <div class="mod_copyright">
                 <div class="links">
-                    <a href="#">关于我们</a>  |  <a href="#">联系我们</a>  |  联系客服  |  商家入驻  |  营销中心  |  手机品优购  |  友情链接  |  销售联盟  |  品优购社区  |  品优购公益  |  English Site  |  Contact U
+                    <a href="#">关于我们</a> | <a href="#">联系我们</a> | 联系客服 | 商家入驻 | 营销中心 | 手机品优购 | 友情链接 | 销售联盟 | 品优购社区 |
+                    品优购公益 | English Site | Contact U
                 </div>
                 <div class="copyright">
                     地址：北京市昌平区建材城西路金燕龙办公楼一层 邮编：100096 电话：400-618-4000 传真：010-82935100 邮箱: zhanghj+itcast.cn <br>
